--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,14 +1,14 @@
 # Maria DB config
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/${DB_NAME}
+    url: jdbc:mariadb://tvscheduledb-secondary:3306/${DB_NAME}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
     driver-class-name: org.mariadb.jdbc.Driver
 
 #Loggin
 logging:
-  config: classpath:logback-spring-local.xml
+  config: classpath:logback-spring-prod.xml
 
 management:
   endpoints:
