--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,3 +1,11 @@
 #Loggin
 logging:
   config: classpath:logback-spring-test.xml
+
+spring:
+  # H2 Database
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: test
+    password: test
+    driver-class-name: org.h2.Driver
