--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,17 @@ jobs:
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
+      - setup_remote_docker:
+          docker_layer_caching: true
+      # install docker cli
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="24.0.4"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
       # Checkout the code as the first step.
       - checkout
       # Create revision variable
