--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,19 @@ jobs:
             curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             mv /tmp/docker/* /usr/bin
+      # install maven
+      - run:
+          name: Install Docker client
+          command: |
+            mkdir -p /usr/share/maven /usr/share/maven/ref
+            curl -fsSL -o /tmp/apache-maven.tar.gz https://apache.osuosl.org/maven/maven-3/3.8.8/binaries/apache-maven-3.8.8-bin.tar.gz
+            tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1
+            rm -f /tmp/apache-maven.tar.gz
+            ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
+            set -x
+            MAVEN_HOME="/usr/share/maven"
+            set -x
+            MAVEN_CONFIG="/root/.m2"
       # Checkout the code as the first step.
       - checkout
       # Create revision variable
