--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,34 +12,10 @@ jobs:
     # Be sure to update the Docker image tag below to openjdk version of your application.
     # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
     docker:
-      - image: ghcr.io/graalvm/graalvm-ce:ol9-java17-22.3.2
+      - image: cimg/openjdk:21.0
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
-      # install docker cli
-      - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="24.0.4"
-            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
-      # install maven
-      - run:
-          name: Install Docker client
-          command: |
-            mkdir -p /usr/share/maven /usr/share/maven/ref
-            curl -fsSL -o /tmp/apache-maven.tar.gz https://apache.osuosl.org/maven/maven-3/3.8.8/binaries/apache-maven-3.8.8-bin.tar.gz
-            tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1
-            rm -f /tmp/apache-maven.tar.gz
-            ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
-            set -x
-            MAVEN_HOME="/usr/share/maven"
-            set -x
-            MAVEN_CONFIG="/root/.m2"
       # Checkout the code as the first step.
       - checkout
       # Create revision variable
@@ -68,15 +44,7 @@ jobs:
       # Build
       - run:
           name: Build
-          command: mvn -Drevision=$REVISION -Dcertificate-authority-data=$CERTIFICATE_AUTHORITY_DATA -Dcluster=$CLUSTER -Dclient-certificate-data=$CLIENT_CERTIFICATE_DATA -Dclient-key-data=$CLIENT_KEY_DATA -Dkubernetes-user=$KUBERNETES_USER -DskipTests=true -Pnative spring-boot:build-image
-      # Tag docker image
-      - run:
-          name: Tag docker images
-          command: docker tag tv-spain-schedule-api:2.$REVISION $REGISTRIY_URL/tv-spain-schedule-api:2.$REVISION
-      # Push docker image
-      - run:
-          name: Push docker images
-          command: docker push $REGISTRIY_URL/tv-spain-schedule-api:2.$REVISION
+          command: mvn -Drevision=$REVISION -Dcertificate-authority-data=$CERTIFICATE_AUTHORITY_DATA -Dcluster=$CLUSTER -Dclient-certificate-data=$CLIENT_CERTIFICATE_DATA -Dclient-key-data=$CLIENT_KEY_DATA -Dkubernetes-user=$KUBERNETES_USER -DskipTests package
       # Persist build
       - persist_to_workspace:
           root: target
