--- a/pom.xml
+++ b/pom.xml
@@ -10,19 +10,19 @@
 	</parent>
 	<groupId>com.jtcoding</groupId>
 	<artifactId>tv-spain-schedule-api</artifactId>
-	<version>2.${revision}</version>
+	<version>3.${revision}</version>
 	<name>tv-spain-schedule-api</name>
 	<description>TV Spain schedule API</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 		<revision>0.0-SNAPSHOT</revision>
-		<mariadb-java-client.version>3.1.4</mariadb-java-client.version>
-		<lombok.version>1.18.26</lombok.version>
-		<springdoc-openapi.version>2.1.0</springdoc-openapi.version>
+		<mariadb-java-client.version>3.5.0</mariadb-java-client.version>
+		<springdoc-openapi.version>2.6.0</springdoc-openapi.version>
 		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
 		<coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
-		<jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
 		<micrometer-registry-prometheus.version>1.13.6</micrometer-registry-prometheus.version>
+		<jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
+		<jib-maven-plugin.version>3.4.3</jib-maven-plugin.version>
 		<certificate-authority-data></certificate-authority-data>
 		<cluster></cluster>
 		<client-certificate-data></client-certificate-data>
@@ -60,8 +60,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>${lombok.version}</version>
-			<scope>provided</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -99,33 +98,40 @@
 		</resources>
 		<plugins>
 			<plugin>
-				<groupId>org.hibernate.orm.tooling</groupId>
-				<artifactId>hibernate-enhance-maven-plugin</artifactId>
-				<version>${hibernate.version}</version>
-				<executions>
-					<execution>
-						<id>enhance</id>
-						<goals>
-							<goal>enhance</goal>
-						</goals>
-						<configuration>
-							<enableLazyInitialization>true</enableLazyInitialization>
-							<enableDirtyTracking>true</enableDirtyTracking>
-							<enableAssociationManagement>true</enableAssociationManagement>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.graalvm.buildtools</groupId>
-				<artifactId>native-maven-plugin</artifactId>
-				<configuration>
-					<imageName>registry.torresj.com/${project.artifactId}-native:${project.version}</imageName>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<!-- Jib -->
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>${jib-maven-plugin.version}</version>
+				<configuration>
+					<container>
+						<ports>
+							<port>8080</port>
+						</ports>
+					</container>
+					<to>
+						<image>registry.torresj.com/nursing-sas-ope-info:${project.version}</image>
+					</to>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
