--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,10 +1,11 @@
 # Maria DB config
 spring:
+  # H2 Database
   datasource:
-    url: jdbc:mariadb://localhost:3306/${DB_NAME}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
-    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:h2:mem:testdb
+    username: test
+    password: test
+    driver-class-name: org.h2.Driver
 
 #Loggin
 logging:
