New cluster added

--- a/src/main/helm/tv-spain-schedule-api/templates/pvc.yaml
+++ b/src/main/helm/tv-spain-schedule-api/templates/pvc.yaml
@@ -3,9 +3,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: tv-spain-schedule-api-pvc
 spec:
-  storageClassName: nfs-storageclass
+  storageClassName: nfs-client
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
+      storage: 500M
